[package]
name = "hello-world-with-tcp-stream"
version = "0.1.0"
edition = "2021"

default-run = "hello-world-with-tcp-stream"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio-stream = { version = "0.1", features = ["net"] }

[dependencies.hyper]
version = "0.14.20"
features = ["full", "http1"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "net", "rt-multi-thread", "io-std"]
